<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.gillsystemsllc</groupId>
    <artifactId>commons</artifactId>
    <version>1.0</version>
    
    
    <properties>
        <!-- JAVA -->
        <java.version>13</java.version>
        <maven.compiler.release>13</maven.compiler.release>
        <maven.compiler.source>13</maven.compiler.source>
        <maven.compiler.target>13</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <dependency.locations.enabled>false</dependency.locations.enabled>
        
        <!-- MAVEN -->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
        
        <!-- COMMONS -->
        <commons-io.version>2.7</commons-io.version>
        <commons-codec.version>1.12</commons-codec.version>
        <commons-text.version>1.9</commons-text.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        
        <!-- LOGGING -->
        <slf4j.version>1.7.32</slf4j.version>
        <logback.version>1.2.9</logback.version>
        
        <!-- UNIT TESTS -->
        <powermock.version>2.0.5</powermock.version>
        
        <!-- JSON -->
        <json-simple.version>1.1.1</json-simple.version>
        
        <!-- SERVER -->
        <jersey.version>2.30.1</jersey.version>
        <jaxb.version>2.3.0</jaxb.version>
        <activation.version>1.1</activation.version>
        
        <!-- MATH -->
        <big-math.version>2.1.0</big-math.version>
        
        <!-- INTERNET -->
        <jsoup.version>1.14.2</jsoup.version>
        
        <!-- HOTKEYS -->
        <jnativehook.version>2.1.0</jnativehook.version>
        
        <!-- MEDIA -->
        <metadata-extractor.version>2.15.0</metadata-extractor.version>
        <vlcj.version>4.1.0</vlcj.version>
        
        <!-- SPEECH OUTPUT -->
        <marytts.version>5.2</marytts.version>
    </properties>
    
    
    <dependencies>
        <!-- COMMONS -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons-text.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        
        <!-- LOGGING -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <!-- UNIT TESTS -->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>${powermock.version}</version>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>${powermock.version}</version>
        </dependency>
        
        <!-- JSON -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${json-simple.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <!-- SERVER -->
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-server</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-multipart</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.inject</groupId>
            <artifactId>jersey-hk2</artifactId>
            <version>${jersey.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>${jaxb.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
            <version>${activation.version}</version>
        </dependency>
        
        <!-- MATH -->
        <dependency>
            <groupId>ch.obermuhlner</groupId>
            <artifactId>big-math</artifactId>
            <version>${big-math.version}</version>
        </dependency>
        
        <!-- INTERNET -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
        
        <!-- HOTKEYS -->
        <dependency>
            <groupId>com.1stleg</groupId>
            <artifactId>jnativehook</artifactId>
            <version>${jnativehook.version}</version>
        </dependency>
        
        <!-- MEDIA -->
        <dependency>
            <groupId>com.drewnoakes</groupId>
            <artifactId>metadata-extractor</artifactId>
            <version>${metadata-extractor.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.co.caprica</groupId>
            <artifactId>vlcj</artifactId>
            <version>${vlcj.version}</version>
        </dependency>
        
        <!-- SPEECH OUTPUT -->
        <dependency>
            <groupId>de.dfki.mary</groupId>
            <artifactId>marytts-runtime</artifactId>
            <version>${marytts.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>commons-io</groupId>
                    <artifactId>commons-io</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>de.dfki.mary</groupId>
            <artifactId>voice-cmu-bdl-hsmm</artifactId>
            <version>${marytts.version}</version>
        </dependency>
        <dependency>
            <groupId>de.dfki.mary</groupId>
            <artifactId>voice-cmu-rms-hsmm</artifactId>
            <version>${marytts.version}</version>
        </dependency>
        <dependency>
            <groupId>de.dfki.mary</groupId>
            <artifactId>voice-cmu-slt-hsmm</artifactId>
            <version>${marytts.version}</version>
        </dependency>
        <dependency>
            <groupId>de.dfki.mary</groupId>
            <artifactId>voice-dfki-obadiah-hsmm</artifactId>
            <version>${marytts.version}</version>
        </dependency>
        <dependency>
            <groupId>de.dfki.mary</groupId>
            <artifactId>voice-dfki-poppy-hsmm</artifactId>
            <version>${marytts.version}</version>
        </dependency>
        <dependency>
            <groupId>de.dfki.mary</groupId>
            <artifactId>voice-dfki-prudence-hsmm</artifactId>
            <version>${marytts.version}</version>
        </dependency>
        <dependency>
            <groupId>de.dfki.mary</groupId>
            <artifactId>voice-dfki-spike-hsmm</artifactId>
            <version>${marytts.version}</version>
        </dependency>
    </dependencies>
    
    
    <build>
        <directory>${project.basedir}/bin</directory>
        <finalName>${project.artifactId}-${project.version}</finalName>
        
        <sourceDirectory>${project.basedir}/src</sourceDirectory>
        <outputDirectory>${project.basedir}/bin/classes</outputDirectory>
        <testSourceDirectory>${project.basedir}/test</testSourceDirectory>
        <testOutputDirectory>${project.basedir}/bin/test-classes</testOutputDirectory>
        
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>${maven-install-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    
    
    <repositories>
        <repository>
            <id>spring-plugin</id> <!-- Mary TTS -->
            <name>Spring Plugins</name>
            <url>https://repo.spring.io/plugins-release/</url>
        </repository>
    </repositories>

</project>